--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 #main {
-    float: left;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25%;
+    grid-template-rows: 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20%;
+    grid-column-start: 1;
+    grid-column-end: 16;
+
     background-color: lightpink;
-    width: 50%;
     margin: auto;
-    padding: 10%;
+    padding: 50px;
+    width: 15%;
 
 }
