--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,26 @@
-#main {
+* {
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
+#container {
     background-color: lightpink;
-    margin: auto;
-    padding: 10px;
-    width: 50vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 10%;
+    margin-bottom: 25%;
+    width: 20vw;
+    aspect-ratio: 1/1;
 }
 
 .cell {
-    border: 1px solid gray;
-    min-width: 1px;
-    min-height: 2px;
     display: inline-block;
+    border: 1px solid black;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1/1;
+
   }
