--- a/styles.css
+++ b/styles.css
@@ -3,24 +3,30 @@
     padding: 0;
     margin: 0;
 }
+
 #container {
     background-color: lightpink;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-top: 10%;
+    margin-left: 40%;
+    margin-right: 40%;
+    margin-top: 5%;
     margin-bottom: 25%;
     width: 20vw;
     aspect-ratio: 1/1;
 }
 
 .cell {
-    display: inline-block;
     border: 1px solid black;
     width: 100%;
     height: 100%;
     aspect-ratio: 1/1;
 
-  }
+}
+
+#reset, #title {
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+}
